# Algorithmic-Automative-Adaptive-Acreage

./: .gitignore  README.md  main.py
.github/workflows/: deploy-github-pages.yml
Web Server/: package-lock.json  package.json
Web/AAAA/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.js
Web/AAAA/src/: App.jsx  index.css
Web/AAAA/src/components/: Agent.jsx  Controls.jsx  Dashboard.jsx  Layout.jsx  Onboarding.jsx  Sensors.jsx  Settings.jsx
Web/AAAA/src/lib/: agent.js  constants.js  db.js  utils.js
broker/: broker.py  requirements.txt
broker/tls/: broker.crt  broker.key
firmware/: actuators.py  config.py  diagnostic.py  main.py  sensors.py
server/: README.md  agent.py  ai.py  config.py  db.py  key_vault.py  main.py  mqtt_client.py  pyproject.toml  requirements.txt  worker.py  wrangler.toml
server/.wrangler/cache/: wrangler-account.json
tests/connections/: fan.py  pump.py  soil.py  temp.py
tests/logic/: autopilot.py
