[project]
name = "greenhouse-orchestrator"
version = "0.1.0"
description = "Cloudflare Workers backend for the greenhouse dashboard"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic",
  "openai",
]

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk",
]
